# Football-Manager

./: CMakeLists.txt  Game.cpp  Game.h  League.cpp  League.h  LoanTransfer.cpp  LoanTransfer.h  Player.cpp  Player.h  README.md  Team.cpp  Team.h  Transfer.cpp  Transfer.h  a  date.txt  main.cpp
.github/workflows/: cmake.yml
headers/: BalancedTactic.h  Button.h  DefensiveTactic.h  Errors.h  Game.h  GameEngine.h  League.h  ListObject.h  LoanTransfer.h  Menu.h  MenuFactory.h  OffensiveTactic.h  Player.h  Tactic.h  Team.h  Transfer.h
scripts/: run.sh  run_valgrind.sh
sources/: BalancedTactic.cpp  Button.cpp  DefensiveTactic.cpp  Errors.cpp  Game.cpp  GameEngine.cpp  League.cpp  ListObject.cpp  LoanTransfer.cpp  Menu.cpp  MenuFactory.cpp  OffensiveTactic.cpp  Player.cpp  Tactic.cpp  Team.cpp  Transfer.cpp
